--- a/src/main/resources/db_config.properties
+++ b/src/main/resources/db_config.properties
@@ -1,3 +1,3 @@
-jdbc.url=jdbc:mysql://localhost/muDB
-jdbc.user=!!ar7CWlcL8eI=
-jdbc.password=!!ar7CWlcL8eI=
+jdbc.url=jdbc:mysql://localhost:3306/car_catalog_epam_project?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.user=root
+jdbc.password=root
