--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <version>8.0.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
